<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_block_word_list"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="dc.maitetsufd.ui.BlockWordListActivity">


  <android.support.v7.widget.Toolbar
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_gravity="start|top"
          android:layout_width="match_parent"
          android:layout_height="?actionBarSize"
          android:contentInsetLeft="0dp"
          android:contentInsetStart="0dp"
          app:contentInsetLeft="5dp"
          app:contentInsetStart="0dp"
          android:contentInsetRight="0dp"
          android:contentInsetEnd="0dp"
          app:contentInsetRight="5dp"
          app:contentInsetEnd="0dp"
          android:background="?attr/colorPrimary" android:id="@+id/toolbar4">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp">
      <Button
              android:text="@string/cancle"
              android:layout_height="25dp" android:id="@+id/block_word_cancel"
              android:layout_width="50dp"
              android:gravity="center"
              android:textAppearance="@style/TitleButton"
              android:layout_alignParentTop="true"
              android:layout_alignParentBottom="true"
              android:layout_alignParentStart="true"/>
      <Button
              android:text="@string/save"
              android:layout_height="25dp" android:id="@+id/block_word_save"
              android:layout_width="50dp"
              android:gravity="center"
              android:textAppearance="@style/TitleButton"
              android:layout_alignParentTop="true"
              android:layout_alignParentBottom="true"
              android:layout_alignParentEnd="true"/>

      <TextView
              android:id="@+id/block_word_title"
              style="@style/Toolbar.TitleText"
              android:text="@string/block_word_list_title"
              android:textColor="@color/colorWhite"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_alignParentTop="true"
              android:layout_toStartOf="@+id/block_word_save"
              android:layout_toEndOf="@+id/block_word_cancel"
              android:layout_alignParentBottom="true"/>

    </RelativeLayout>
  </android.support.v7.widget.Toolbar>

    <ListView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/block_word_list_view"
              android:divider="@color/colorPrimaryLight"
              android:layout_gravity="start|top"
              android:layout_marginTop="?actionBarSize"
              android:layout_marginBottom="60dp"
              android:dividerHeight="1px">
    </ListView>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="70dp"
                  android:id="@+id/block_word_put_layout"
                  android:paddingTop="15dp"
                  android:paddingBottom="15dp"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:layout_gravity="start|bottom"
                  android:gravity="center">

      <Button android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/block_word_put_button"
              android:text="@string/put_block_word"/>
    </LinearLayout>

</FrameLayout>
