<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_article_write"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="dc.maitetsu.ui.ArticleWriteActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/appbar_padding_top">

            <android.support.v7.widget.Toolbar
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:contentInsetLeft="0dp"
                    android:contentInsetStart="0dp"
                    app:contentInsetLeft="5dp"
                    app:contentInsetStart="0dp"
                    android:contentInsetRight="0dp"
                    android:contentInsetEnd="0dp"
                    app:contentInsetRight="5dp"
                    app:contentInsetEnd="0dp"
                    android:background="?attr/colorPrimary">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="8dp">
                    <Button
                            android:text="@string/cancle"
                            android:layout_height="25dp" android:id="@+id/article_write_cancle"
                            android:layout_width="50dp"
                            android:gravity="center"
                            android:textAppearance="@style/TitleButton"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"

                            android:layout_alignParentStart="true"/>
                    <Button
                            android:text="@string/article_write_submit"
                            android:layout_height="25dp" android:id="@+id/article_write_submit"
                            android:layout_width="50dp"
                            android:gravity="center"
                            android:textAppearance="@style/TitleButton"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"/>

                    <TextView
                            android:id="@+id/article_write_activity_title"
                            style="@style/Toolbar.TitleText"
                            android:textColor="@color/colorWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_alignParentTop="true"
                            android:layout_toStartOf="@+id/article_write_submit"
                            android:layout_toEndOf="@+id/article_write_cancle" android:layout_alignParentBottom="true"/>

                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/article_write_title"
                android:lines="1"
                android:ems="10"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginTop="50dp"
                android:id="@+id/article_write_title"
                android:layout_marginRight="4dp"
        />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"/>

        <EditText
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:lines="12"
                android:minLines="12"
                android:scrollbars="vertical"
                android:background="@android:color/transparent"
                android:gravity="left|top"
                android:hint="@string/article_write_content"
                android:ems="10"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:id="@+id/article_write_content"
                android:layout_marginBottom="10dp" android:layout_height="wrap_content"/>


        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">

            <ScrollView android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:minHeight="100dp"
                        android:layout_toStartOf="@+id/article_write_file_add"
                        android:layout_alignParentBottom="true">

                <GridLayout android:id="@+id/article_write_file_infos"
                            android:orientation="horizontal"
                            android:columnCount="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|top"
                            android:useDefaultMargins="true">

                </GridLayout>


            </ScrollView>


            <Button
                    android:text="@string/article_write_add"
                    android:layout_height="40dp" android:id="@+id/article_write_file_add"
                    android:layout_width="60dp"
                    android:textAppearance="@style/TitleButton"
                    android:layout_gravity="center"
                    android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>


</ScrollView>